# scrabble

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  projenv  projenv.ps1  projenv.sh
__cmake_systeminformation/: CMakeCache.txt
assets/boards/: standard-board.txt
assets/dictionaries/: csw_06.dict
assets/images/: 2.png:Zone.Identifier  Setting.png:Zone.Identifier
scrabble/: CMakeLists.txt  main.cpp
scrabble/GUI/: include.h  welcome  welcome.cpp
scrabble/cli/: CMakeLists.txt  game_cli.cpp  game_cli.hpp  utils.hpp
scrabble/core/: CMakeLists.txt  bag.cpp  bag.hpp  board.cpp  board.hpp  bot.cpp  bot.hpp  bot.txt  dictionary.cpp  dictionary.hpp  enumerations.hpp  game.cpp  game.hpp  lexicon.cpp  lexicon.hpp  player.cpp  player.hpp  preferences.hpp  square.cpp  square.hpp  task.txt  tile.cpp  tile.hpp  word.hpp
scrabble/game/: CMakeLists.txt  game.cpp  game.hpp
scrabble/gui/: CMakeLists.txt  GUI.cpp  GUI.h  GUI_main_test  GUI_main_test.cpp  build.sh  create_new_game.cpp  create_new_game.hpp  game_state.hpp  gui.cpp  gui.hpp  important.cpp  important.h  include.h  ingame_state.cpp  ingame_state.hpp  input_names_state.cpp  input_names_state.hpp  input_player_name.cpp  input_player_name.hpp  main_menu.cpp  main_menu.hpp  main_menu_state.cpp  main_menu_state.hpp  needsbasic.cpp  needsbasic.h  resource_manager.cpp  resource_manager.hpp  select_num_players.cpp  select_num_players.hpp  select_num_players_state.cpp  select_num_players_state.hpp  settingnew.cpp  settingnew.h  settings.cpp  settings.hpp  settings_state.cpp  settings_state.hpp  start.cpp  start.h  (+4 more)
scrabble/gui/assets/images/: chooseplayer.png:Zone.Identifier
test/: CMakeLists.txt  scrabble_test.cpp
test/new-logic/: CMakeLists.txt  game.cpp  game.hpp  nboard.cpp  nboard.hpp  nplayer.cpp  nplayer.hpp
